--- a/index.html
+++ b/index.html
@@ -374,28 +374,32 @@ html {
   </div>
 </header>
 
-<div class="dropdown-menu" id="dropdownMenu" style="display: none; position: fixed; top: 60px; right: 20px; background-color: rgba(30, 58, 138, 0.95); backdrop-filter: blur(10px); border-radius: 8px; padding: 10px 20px; z-index: 1000;">
-  <a href="#acasa">Acasă</a>
-  <a href="#despre">Despre</a>
-  <a href="#resurse">Resurse</a>
-  <a href="#consiliere">Consiliere</a>
-  <a href="#pachete">Pachete</a>
-  <a href="#faq">FAQ</a>
-  <a href="#contact">Contact</a>
+
+<div class="dropdown-menu" id="dropdownMenu" style="display: none; position: absolute; top: 55%; left: 50%; transform: translateX(-50%); background-color: rgba(30, 58, 138, 0.95); backdrop-filter: blur(10px); border-radius: 8px; padding: 20px 30px; z-index: 1000;">
+  <a href="#acasa" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Acasă</a>
+  <a href="#despre" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Despre</a>
+  <a href="#resurse" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Resurse</a>
+  <a href="#consiliere" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Consiliere</a>
+  <a href="#pachete" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Pachete</a>
+  <a href="#faq" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">FAQ</a>
+  <a href="#contact" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Contact</a>
 </div>
 
 
 
 
-<div class="dropdown-menu" id="dropdownMenu">
-  <a href="#acasa">Acasă</a>
-  <a href="#despre">Despre</a>
-  <a href="#resurse">Resurse</a>
-  <a href="#consiliere">Consiliere</a>
-  <a href="#pachete">Pachete</a>
-  <a href="#faq">FAQ</a>
-  <a href="#contact">Contact</a>
+
+
+<div class="dropdown-menu" id="dropdownMenu" style="display: none; position: absolute; top: 55%; left: 50%; transform: translateX(-50%); background-color: rgba(30, 58, 138, 0.95); backdrop-filter: blur(10px); border-radius: 8px; padding: 20px 30px; z-index: 1000;">
+  <a href="#acasa" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Acasă</a>
+  <a href="#despre" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Despre</a>
+  <a href="#resurse" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Resurse</a>
+  <a href="#consiliere" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Consiliere</a>
+  <a href="#pachete" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Pachete</a>
+  <a href="#faq" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">FAQ</a>
+  <a href="#contact" style="display:block; color:white; font-weight:bold; text-decoration:none; padding:10px 0;">Contact</a>
 </div>
+
 
 
 <h1 id="typing-effect" style="color:#ffffff; background-color:#000; padding:10px; text-align:center; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
@@ -419,25 +423,18 @@ html {
 <!-- HERO SECTION NOUĂ -->
 
 <!-- HERO SECTION CU VIDEO -->
+
+<!-- HERO SECTION CU VIDEO SI TEXT -->
 <section id="acasa" style="position: relative; height: 100vh; overflow: hidden; display: flex; justify-content: center; align-items: center; text-align: center;">
   <video autoplay muted loop playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
     <source src="https://cdn.coverr.co/videos/coverr-man-walking-under-a-bridge-4289/1080p.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  
-<div style="position: absolute; top: 20px; right: 20px; z-index: 10;">
-  
-</div>
-
-<div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.5); border-radius: 8px;">
-    <h1 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Stop Pariuri.</h1>
-    <p style="font-size: 1.3rem; margin-bottom: 2rem;">Escape the matrix, be the change.</p>
-    <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
-      <a href="#resurse" style="padding: 0.75rem 1.5rem; background-color: transparent; border: 2px solid white; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">📚 Află adevărul</a>
-      <a href="#contact" style="padding: 0.75rem 1.5rem; background-color: #f97316; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">💬 Cere ajutor acum</a>
-    </div>
+  <div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.6); border-radius: 8px;">
+    <p style="font-size: 1.6rem; font-weight: bold;">Escape the matrix, be the change.</p>
   </div>
 </section>
+
 
 
 
