--- a/index.html
+++ b/index.html
@@ -425,15 +425,18 @@ html {
 <!-- HERO SECTION CU VIDEO -->
 
 <!-- HERO SECTION CU VIDEO SI TEXT -->
+
+<!-- HERO SECTION CU VIDEO SI TEXT CLAR -->
 <section id="acasa" style="position: relative; height: 100vh; overflow: hidden; display: flex; justify-content: center; align-items: center; text-align: center;">
   <video autoplay muted loop playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
     <source src="https://cdn.coverr.co/videos/coverr-man-walking-under-a-bridge-4289/1080p.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.6); border-radius: 8px;">
+  <div style="color: white; z-index: 1; padding: 2rem; background-color: rgba(0,0,0,0.75); border-radius: 8px;">
     <p style="font-size: 1.6rem; font-weight: bold;">Escape the matrix, be the change.</p>
   </div>
 </section>
+
 
 
 
