--- a/index.html
+++ b/index.html
@@ -203,6 +203,18 @@
   color: #222;
 }
 
+
+
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    color: white;
+  }
+</style>
+
+
 </style>
 
 <style>
@@ -271,7 +283,7 @@ html {
 </head>
 <body>
 
-<h1 id="typing-effect" style="color:#ffffff; background-color:#000; padding:10px; text-align:center; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
+<h1 id="typing-effect" style="color:#ffffff; background-color:#000; padding:40px 20px; text-align:center; font-size: 2rem; font-weight: bold; margin: 0;"></h1>
 
   <header>
     <nav>
