--- a/index.html
+++ b/index.html
@@ -212,6 +212,20 @@
     background-color: #000000;
     color: white;
   }
+
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+
+<style>
+  section {
+    scroll-margin-top: 100px;
+  }
+</style>
+
+</style>
+
 </style>
 
 
