--- a/index.html
+++ b/index.html
@@ -12,207 +12,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Realitate, nu iluzii</title>
-  <style>
-    :root {
-      --primary: #1e3a8a;
-      --accent: #f97316;
-      --bg: #f1f5f9;
-      --text: #1e293b;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: var(--primary);
-      color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-    }
-
-    .logo img {
-      height: 36px;
-      margin-right: 10px;
-    }
-
-    ul.nav-links {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-    }
-
-    ul.nav-links li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    ul.nav-links li a:hover {
-      color: var(--accent);
-    }
-
-    main {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
-    h1, h2 {
-      color: var(--primary);
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #e2e8f0;
-      color: #334155;
-      font-size: 0.9rem;
-    }
   
-    
-    @media (max-width: 768px) {
-      header {
-        padding: 0.5rem 1rem;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .logo {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-      }
-
-      ul.nav-links {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 0.5rem;
-        margin: 0;
-        padding: 0;
-      }
-
-      ul.nav-links li {
-        margin: 0;
-      }
-
-      ul.nav-links li a {
-        font-size: 0.9rem;
-        padding: 0.3rem 0.6rem;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 4px;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      ul.nav-links {
-        flex-direction: column;
-        gap: 0.75rem;
-        margin-top: 1rem;
-      }
-
-      .logo {
-        margin-bottom: 1rem;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      .responsive-stack {
-        flex-direction: column;
-      }
-
-      .responsive-stack > div {
-        width: 100%;
-      }
-
-      section {
-        padding: 1rem 0;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      h2 {
-        font-size: 1.3rem;
-      }
-    }
-    
-/* Secțiune Testimoniale */
-#testimoniale {
-  background-color: #f9f9f9;
-  padding: 40px 20px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-#testimoniale h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #222;
-}
-.testimonial {
-  max-width: 600px;
-  margin: 0 auto 30px auto;
-  font-style: italic;
-  color: #444;
-  text-align: center;
-}
-.testimonial span {
-  display: block;
-  margin-top: 10px;
-  font-weight: bold;
-  color: #222;
-}
-
-
-
 <style>
   html, body {
     margin: 0;
     padding: 0;
     background-color: #000000;
     color: white;
+    scroll-behavior: smooth;
+  }
+
+  nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 128, 0.95);
+    z-index: 1000;
+    overflow-x: auto;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    list-style: none;
+    margin: 0;
+    padding: 0.5rem 1rem;
+    gap: 1rem;
+    overflow-x: auto;
+  }
+
+  .nav-links li a {
+    color: white;
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.15);
+    padding: 6px 12px;
+    border-radius: 6px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    white-space: nowrap;
+    transition: background 0.2s ease;
+  }
+
+  .nav-links li a:hover {
+    background-color: rgba(255, 255, 255, 0.3);
   }
 </style>
+
 
 
 </style>
