--- a/index.html
+++ b/index.html
@@ -102,66 +102,81 @@
     }
   
     
+    @media (max-width: 768px) {
+      header {
+        padding: 0.5rem 1rem;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .logo {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+      }
+
+      ul.nav-links {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0.5rem;
+        margin: 0;
+        padding: 0;
+      }
+
+      ul.nav-links li {
+        margin: 0;
+      }
+
+      ul.nav-links li a {
+        font-size: 0.9rem;
+        padding: 0.3rem 0.6rem;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      ul.nav-links {
+        flex-direction: column;
+        gap: 0.75rem;
+        margin-top: 1rem;
+      }
+
+      .logo {
+        margin-bottom: 1rem;
+      }
+
+      main {
+        padding: 1rem;
+      }
+
+      .responsive-stack {
+        flex-direction: column;
+      }
+
+      .responsive-stack > div {
+        width: 100%;
+      }
+
+      section {
+        padding: 1rem 0;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 1.3rem;
+      }
+    }
     
-@media (max-width: 768px) {
-  header {
-    padding: 0.5rem 1rem;
-  }
-
-  nav {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .logo {
-    font-size: 1.2rem;
-    margin-bottom: 0;
-  }
-
-  ul.nav-links {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    gap: 0.75rem;
-    margin: 0;
-    padding: 0;
-    overflow-x: auto;
-  }
-
-  ul.nav-links li a {
-    font-size: 0.9rem;
-    padding: 0.4rem 0.6rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 4px;
-    white-space: nowrap;
-  }
-
-  main {
-    padding: 1rem;
-  }
-
-  .responsive-stack {
-    flex-direction: column;
-  }
-
-  .responsive-stack > div {
-    width: 100%;
-  }
-
-  section {
-    padding: 1rem 0;
-  }
-
-  h1 {
-    font-size: 1.5rem;
-  }
-
-  h2 {
-    font-size: 1.3rem;
-  }
-}
-
-
 /* Secțiune Testimoniale */
 #testimoniale {
   background-color: #f9f9f9;
