--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ html {
 
   <header>
     <nav>
-      <div class="logo"><img src="https://meferrrrrrrrrr.github.io/stop-pariuri/assets/logo_eye_orange_x.png" alt="SuperStop Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
+      <div class="logo"><img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png.png" alt="SuperStop Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
         <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
         <span>Stop Pariuri</span>
       </div>
