--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ html {
 
   <header>
     <nav>
-      <div class="logo">
-        
+      <div class="logo"><img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="SuperStop Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
+        <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
         <span>Stop Pariuri</span>
       </div>
       <ul class="nav-links">
