--- a/index.html
+++ b/index.html
@@ -287,10 +287,7 @@ html {
 
   <header>
     <nav>
-      <div class="logo"><img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="SuperStop Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">
-        <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
-        <span>Stop Pariuri</span>
-      </div>
+      <div class="logo"><img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="SuperStop Logo" style="height: 36px; vertical-align: middle; margin-right: 10px;">Stop Pariuri</div>
       <ul class="nav-links">
         <li><a href="#acasa">Acasă</a></li>
         <li><a href="#despre">ℹ️ Despre</a></li>
