--- a/index.html
+++ b/index.html
@@ -102,7 +102,20 @@
     }
   
     
-    @media (max-width: 768px) {
+    
+@media (max-width: 768px) {
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .logo img {
+    height: 32px;
+  }
+}
+
+@media (max-width: 768px) {
       header {
         padding: 0.5rem 1rem;
       }
