--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
   
     
     
+
+@media (max-width: 768px) {
+  .nav-links {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .nav-links::-webkit-scrollbar {
+    display: none;
+  }
+
+  .nav-links li {
+    flex: 0 0 auto;
+  }
+
+  .nav-links li a {
+    font-size: 0.85rem;
+    padding: 6px 12px;
+    display: inline-block;
+  }
+}
+
 @media (max-width: 768px) {
   .logo {
     display: flex;
