--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ html {
 
 <section id="pachete">
   <h2>Alege drumul care te scoate din cerc. Alege pachetul potrivit.</h2>
-<p style="margin-top: 10px; font-size: 1rem; color: #ccc;">Fiecare pachet e un pas spre libertate. Alege-l pe cel care ți se potrivește și începe schimbarea.</p>
+<p style="margin-top: 10px; font-size: 1rem; color: #000; font-weight: bold;">Fiecare pachet e un pas spre libertate. Alege-l pe cel care ți se potrivește și începe schimbarea.</p>
   <p>Consilierea este 100% confidențială și personalizată. Fiecare sesiune este gândită să te ajute să înțelegi cauza dependenței și cum să ieși din ea.</p>
 
   <div class="responsive-stack" style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
