--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ html {
     <section id="despre">
       <h2>Despre proiect</h2>
       <p>Acest site este un semnal de alarmă pentru cei care cred că pot bate sistemul. Realitatea nu minte, dar promisiunile cazinourilor – da.</p>
-<p style="font-size: 1.1rem; font-weight: bold; color: #ffffff; max-width: 700px; margin: 20px auto 0; text-align: center;">„Când deschizi ochii, nu mai poți minți realitatea. Nici pe tine.”</p>
+<p style="font-size: 1.1rem; font-weight: bold; color: #000000; max-width: 700px; margin: 20px auto 0; text-align: center;">„Când deschizi ochii, nu mai poți minți realitatea. Nici pe tine.”</p>
     </section>
   
 
