--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/png" href="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png">
 
   <title>Stop Pariuri – Consiliere reală pentru cei care vor să iasă din joc</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
   <meta name="keywords" content="pariuri, jocuri de noroc, dependență, consiliere, stop joc, cum mă las de pariuri, consiliere jocuri de noroc, ajutor real, stop pariuri">
   <meta name="robots" content="index, follow">
@@ -12,6 +13,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Realitate, nu iluzii</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     :root {
       --primary: #1e3a8a;
