--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
 <head>
   <link rel="icon" type="image/png" href="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png">
 
+  <!-- Meta pentru SEO -->
+  <meta name="description" content="Stop Pariuri – Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc. O platformă reală, fără promisiuni false.">
+  <meta name="keywords" content="stop pariuri, adictie pariuri, consiliere jocuri, scapă de dependență, jocuri de noroc, superstop">
+  <meta name="author" content="SuperStop">
+
+  <!-- Meta Open Graph pentru Facebook/WhatsApp -->
+  <meta property="og:title" content="Stop Pariuri – Escape the matrix, be the change." />
+  <meta property="og:description" content="Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc." />
+  <meta property="og:image" content="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" />
+  <meta property="og:url" content="https://meferrrrrrrrrr.github.io/stop-pariuri/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Meta pentru Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
+
   <title>Stop Pariuri – Consiliere reală pentru cei care vor să iasă din joc</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Meta pentru SEO -->
+  <meta name="description" content="Stop Pariuri – Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc. O platformă reală, fără promisiuni false.">
+  <meta name="keywords" content="stop pariuri, adictie pariuri, consiliere jocuri, scapă de dependență, jocuri de noroc, superstop">
+  <meta name="author" content="SuperStop">
+
+  <!-- Meta Open Graph pentru Facebook/WhatsApp -->
+  <meta property="og:title" content="Stop Pariuri – Escape the matrix, be the change." />
+  <meta property="og:description" content="Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc." />
+  <meta property="og:image" content="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" />
+  <meta property="og:url" content="https://meferrrrrrrrrr.github.io/stop-pariuri/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Meta pentru Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
   <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
   <meta name="keywords" content="pariuri, jocuri de noroc, dependență, consiliere, stop joc, cum mă las de pariuri, consiliere jocuri de noroc, ajutor real, stop pariuri">
   <meta name="robots" content="index, follow">
@@ -14,6 +46,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Realitate, nu iluzii</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Meta pentru SEO -->
+  <meta name="description" content="Stop Pariuri – Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc. O platformă reală, fără promisiuni false.">
+  <meta name="keywords" content="stop pariuri, adictie pariuri, consiliere jocuri, scapă de dependență, jocuri de noroc, superstop">
+  <meta name="author" content="SuperStop">
+
+  <!-- Meta Open Graph pentru Facebook/WhatsApp -->
+  <meta property="og:title" content="Stop Pariuri – Escape the matrix, be the change." />
+  <meta property="og:description" content="Consiliere sinceră pentru cei care vor să iasă din dependența de jocuri de noroc." />
+  <meta property="og:image" content="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" />
+  <meta property="og:url" content="https://meferrrrrrrrrr.github.io/stop-pariuri/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Meta pentru Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     :root {
       --primary: #1e3a8a;
