--- a/index.html
+++ b/index.html
@@ -506,7 +506,25 @@ html {
 
   <footer>
     © 2025 StopPariuri – Educație, Nu Iluzii
-  </footer>
+  
+<div style="text-align: center; font-size: 0.9rem; margin-top: 20px; color: #aaa;">
+  Vizitatori azi: <span id="visitor-count">...</span>
+</div>
+
+<script>
+  const startCount = 50;
+  const key = "superstop_visits_" + new Date().toISOString().slice(0, 10); // pe zi
+  let count = localStorage.getItem(key);
+  if (!count) {
+    count = startCount;
+  } else {
+    count = parseInt(count) + 1;
+  }
+  localStorage.setItem(key, count);
+  document.getElementById("visitor-count").innerText = count;
+</script>
+
+</footer>
 
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(link => {
@@ -539,6 +557,24 @@ html {
 <!-- ⚖️ Copyright -->
 <footer style="text-align: center; padding: 1em; background-color: #f1f1f1; font-size: 0.9rem; margin-top: 2em;">
   © 2025 Stop Pariuri. Toate drepturile rezervate.
+
+<div style="text-align: center; font-size: 0.9rem; margin-top: 20px; color: #aaa;">
+  Vizitatori azi: <span id="visitor-count">...</span>
+</div>
+
+<script>
+  const startCount = 50;
+  const key = "superstop_visits_" + new Date().toISOString().slice(0, 10); // pe zi
+  let count = localStorage.getItem(key);
+  if (!count) {
+    count = startCount;
+  } else {
+    count = parseInt(count) + 1;
+  }
+  localStorage.setItem(key, count);
+  document.getElementById("visitor-count").innerText = count;
+</script>
+
 </footer>
 
 
@@ -560,6 +596,24 @@ window.onload = typeWriter;
 <footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:60px; font-size:14px;">
     <p><strong>Disclaimer:</strong> Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
     <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
+
+<div style="text-align: center; font-size: 0.9rem; margin-top: 20px; color: #aaa;">
+  Vizitatori azi: <span id="visitor-count">...</span>
+</div>
+
+<script>
+  const startCount = 50;
+  const key = "superstop_visits_" + new Date().toISOString().slice(0, 10); // pe zi
+  let count = localStorage.getItem(key);
+  if (!count) {
+    count = startCount;
+  } else {
+    count = parseInt(count) + 1;
+  }
+  localStorage.setItem(key, count);
+  document.getElementById("visitor-count").innerText = count;
+</script>
+
 </footer>
 
 
