--- a/index.html
+++ b/index.html
@@ -506,6 +506,37 @@ html {
 
   
 
+  <script>
+    document.querySelectorAll('a[href^="#"]').forEach(link => {
+      link.addEventListener("click", function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute("href"));
+        if (target) {
+          target.scrollIntoView({ behavior: "smooth" });
+        }
+      });
+    });
+  </script>
+
+<!-- 🛡️ Disclaimer legal -->
+<section id="disclaimer" style="padding: 2em; background-color: #f9f9f9; border-top: 1px solid #ddd;">
+  <h2>📌 Notă legală</h2>
+  <p style="font-size: 1rem; line-height: 1.5;">
+    Acest site oferă sprijin și îndrumare educativă persoanelor care vor să se lase de pariuri. Nu este un serviciu medical sau psihologic profesionist. Informațiile de aici nu înlocuiesc sfatul unui specialist acreditat.
+  </p>
+</section>
+
+<!-- 📄 Termeni și condiții -->
+<section id="termeni" style="padding: 2em; background-color: #ffffff; border-top: 1px solid #ddd;">
+  <h2>📄 Termeni și condiții</h2>
+  <p style="font-size: 1rem; line-height: 1.5;">
+    Prin utilizarea acestui site, ești de acord că informațiile oferite sunt strict cu scop educativ și de conștientizare. Nu ne asumăm responsabilitatea pentru deciziile financiare sau personale ale utilizatorilor.
+  </p>
+</section>
+
+<!-- ⚖️ Copyright -->
+
+
 
 <script>
 const text = "Stop Pariuri - Escape the matrix, be the change.";
@@ -522,18 +553,7 @@ window.onload = typeWriter;
 
 
 <!-- FOOTER PERSONALIZAT -->
-<footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:60px; font-size:14px;">
-    
-<div style="text-align: center; font-weight: bold; font-size: 1rem; color: black; margin-top: 1rem;">
-  
 
-<p><strong>Disclaimer:</strong> Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
-    <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
-
-<div style="text-align: center; font-size: 0.9rem; margin-top: 20px; color: #aaa;">
-  
-
-</footer>
 
 
 <!-- BACK TO TOP BUTTON -->
