--- a/index.html
+++ b/index.html
@@ -504,7 +504,9 @@ html {
 
 </main>
 
-  
+  <footer>
+    © 2025 StopPariuri – Educație, Nu Iluzii
+  </footer>
 
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(link => {
@@ -535,7 +537,9 @@ html {
 </section>
 
 <!-- ⚖️ Copyright -->
-
+<footer style="text-align: center; padding: 1em; background-color: #f1f1f1; font-size: 0.9rem; margin-top: 2em;">
+  © 2025 Stop Pariuri. Toate drepturile rezervate.
+</footer>
 
 
 <script>
@@ -553,7 +557,10 @@ window.onload = typeWriter;
 
 
 <!-- FOOTER PERSONALIZAT -->
-
+<footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:60px; font-size:14px;">
+    <p><strong>Disclaimer:</strong> Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
+    <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
+</footer>
 
 
 <!-- BACK TO TOP BUTTON -->
@@ -629,6 +636,19 @@ window.onload = typeWriter;
     }
   });
 </script>
+
+
+<!-- START FOOTER FINAL -->
+<div style="background-color: #f4f4f4; padding: 20px 10px; text-align: center; font-size: 0.95rem; color: black; font-weight: bold; margin-top: 2rem;">
+  <p style="margin-bottom: 8px;">Disclaimer: Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
+  <p style="margin-bottom: 8px;">Vizitatori azi: <span id="visitorCount">53</span></p>
+  <p style="margin: 0;">© 2025 Stop Pariuri. Toate drepturile rezervate.</p>
+</div>
+<script>
+  const count = Math.floor(50 + Math.random() * 25);
+  document.getElementById('visitorCount').textContent = count;
+</script>
+<!-- END FOOTER FINAL -->
 
 </body>
 </html>
